Project_TinyURL/cyx-configfile-and-scripts/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: front
        image: wwwumr/tinyurl
        ports:
        - containerPort: 80
