Project_TinyURL/cyx-configfile-and-scripts/tiny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-tinyurl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-tinyurl
  template:
    metadata:
      labels:
        app: test-tinyurl
    spec:
      containers:
      - name: tinyurl
        image: wangzhiyuan/backup:latest
        ports:
        - containerPort: 9001
        resources:
          limits:
            cpu: 0.5
