Project_TinyURL/cyx-configfile-and-scripts/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    name: front-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31125
  selector:
    app: frontend
