Project_TinyURL/cyx-configfile-and-scripts/tiny-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyurl-service
  labels:
    name: tinyurl-service
spec:
  type: NodePort
  ports:
  - port: 9001
    targetPort: 9001
    protocol: TCP
    nodePort: 31125
  selector:
    app: test-tinyurl
